# Voltyk-bot-v3-python

./: .dockerignore  .env.example  .gitignore  DTEK_REMOVED_NOTES.md  Dockerfile  RAILWAY_DEPLOY_TROUBLESHOOTING.md  README.md  TEST_COVERAGE_ANALYSIS.md  alembic.ini  coverage.json  debug_dtek_check.py  debug_dtek_form.py  docker-compose.yml  memory-agent.md  pyproject.toml  railway.json  www.dtek-krem.com.ua2.har
.github/workflows/: ci.yml  cleanup-branches.yml
aioresponses/: __init__.py
alembic/: env.py
alembic/versions/: 0001_user_power_states_updated_at_tz.py  0002_schedule_checks_add_last_hash.py  0003_schedule_daily_snapshots_pending_notifications.py  0004_ping_error_alerts_admin_reminders.py  0005_user_power_tracking_new_fields.py  0006_user_power_states_datetime_columns.py  0007_emergency_outage.py  0008_sent_reminders.py  0009_drop_user_legacy_fields.py  0010_pending_notifications_created_at_idx.py  0011_fix_emergency_config_updated_at_tz.py  0012_history_tables_fk_cascade.py  0013_cursor_pagination_indexes.py  0014_message_id_biginteger.py  0015_channel_branding_updated_at_tz.py  0016_auto_delete_queue.py  0017_daily_0600_schedule_toggle.py  20260312_0000_a1b2c3d4e5f6_initial_schema.py
app/: bot.py  config.py  main.py
app/constants/: regions.py
app/db/: base.py  engine.py  session.py
app/db/models/: __init__.py  admin.py  channel.py  metrics.py  notification.py  pause_log.py  power.py  schedule.py  ticket.py  user.py
app/handlers/: __init__.py  start.py
app/keyboards/: inline.py
app/middleware/: database.py
app/services/: user_service.py
app/states/: registration.py
app/tasks/: celery_app.py
bot/: __main__.py  app.py  config.py  health.py
bot/constants/: __init__.py  regions.py
bot/db/: __init__.py  models.py  queries.py  session.py
bot/db/queries/: __init__.py  admin.py  auto_delete.py  channels.py  power.py  reminders.py  schedule.py  settings.py  tickets.py  users.py
bot/filters/: __init__.py  admin.py
bot/formatter/: __init__.py  messages.py  schedule.py  template.py  timer.py  utils.py
bot/handlers/: __init__.py  address_check.py  chat_member.py  feedback.py  menu.py  region_request.py  schedule.py  start.py
bot/handlers/admin/: __init__.py  admin_router.py  broadcast.py  button_emoji.py  chart_settings.py  database.py  dtek_debug.py  dtek_spy.py  growth.py  intervals.py  maintenance.py  panel.py  pause.py  support.py  tickets.py
bot/handlers/channel/: __init__.py  branding.py  connect.py  conversation.py  format.py  notifications.py  pause.py  settings.py  test.py
bot/handlers/menu/: __init__.py  help.py  navigation.py  reminders.py  schedule.py  settings.py  stats.py  timer.py
bot/handlers/settings/: __init__.py  alerts.py  channel.py  cleanup.py  data.py  emergency.py  ip.py  region.py  router.py
bot/keyboards/: admin.py  channel.py  common.py  format.py  help.py  inline.py  ip.py  main_menu.py  notifications.py  schedule.py  settings.py  wizard.py
bot/middlewares/: auto_cleanup.py  db.py  maintenance.py  throttle.py
bot/services/: api.py  auto_cleanup.py  branding.py  chart_cache.py  chart_generator.py  emergency_monitor.py  power_monitor.py  scheduler.py
bot/states/: fsm.py
bot/tasks/: celery_app.py  channel_guard.py  notifications.py  schedule_tasks.py
bot/utils/: branding.py  circuit_breaker.py  heartbeat.py  helpers.py  html_to_entities.py  logger.py  metrics.py  rate_limiter.py  telegram.py
docs/: EMOJI_BUTTON_INVENTORY.md  PR_MERGE_TROUBLESHOOTING.md
ops/: README.md
ops/grafana/: voltyk-dashboard.json
ops/prometheus/: alerts.yaml
src/: __main__.py
src/bot/: constants.py  main.py
src/bot/handlers/: start.py
src/bot/keyboards/: inline.py
src/bot/states/: __init__.py  wizard.py
src/core/: config.py  logging.py
src/db/: engine.py
src/queues/: celery_app.py
src/tasks/: channel_check.py
tests/: conftest.py  test_api.py  test_api_http.py  test_app.py  test_auto_cleanup.py  test_branding.py  test_chart_generator.py  test_chat_member.py  test_circuit_breaker.py  test_config.py  test_config_cache_branding.py  test_constants.py  test_db_session.py  test_filters_regions_schedule.py  test_formatter_timer.py  test_handlers_admin.py  test_handlers_alerts.py  test_handlers_broadcast.py  test_handlers_channel.py  test_handlers_chat_member.py  test_handlers_ip.py  test_handlers_menu.py  test_handlers_schedule.py  test_handlers_start.py  test_heartbeat.py  test_helpers.py  test_html_to_entities.py  test_keyboards.py  test_keyboards_emoji_fallback.py  test_logger.py  test_messages.py  test_metrics.py  test_middlewares.py  test_power_monitor.py  test_power_monitor_extra.py  test_queries.py  test_queries_admin.py  test_queries_channels.py  test_queries_power.py  test_queries_reminders.py  (+11 more)
