[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voltyk-bot"
version = "4.0.0"
description = "Voltyk Bot v4 — Power outage monitoring Telegram bot"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.26,<4",
    "aiohttp>=3.9,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "structlog>=24.1",
    "uvloop>=0.19; sys_platform != 'win32'",
    "aioping>=0.4",
    "sentry-sdk[aiohttp]>=2.0,<3",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aioresponses>=0.7",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["bot"]
omit = ["bot/__main__.py", "bot/app.py"]

[tool.coverage.report]
show_missing = true
# Starting threshold — raise incrementally as more tests are added
fail_under = 15
