[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voltyk-bot"
version = "4.0.0"
description = "Voltyk Bot v4 — Power outage monitoring Telegram bot"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.26,<4",
    "aiohttp>=3.9,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "structlog>=24.1",
    "uvloop>=0.19; sys_platform != 'win32'",
    "aioping>=0.4",
    "sentry-sdk[aiohttp]>=2.0,<3",
    "redis>=5.0",
    "cairosvg>=2.7,<3",
    "prometheus-client>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aioresponses>=0.7",
    "ruff>=0.3",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -v"

[tool.coverage.run]
source = ["bot"]
# __main__ and the top-level main() in app.py are entry-point bootstrap:
# signal-handler setup, aiohttp web.AppRunner, polling loop.  Those paths
# require real sockets and are exercised by integration/deploy tests, not
# the unit suite.  Every other function in app.py IS unit-tested; see
# tests/test_app.py for the regression guards.
omit = ["bot/__main__.py", "bot/app.py"]

[tool.coverage.report]
show_missing = true
# Raised to 99 — we have 100% coverage; prevents silent regression
fail_under = 99

[tool.bandit]
# B101: assert used — fine for type narrowing in handlers
# B104: hardcoded bind 0.0.0.0 — required for container/webhook server
# B110: try-except-pass — intentional in async background task cleanup
# B112: try-except-continue — intentional for skipping malformed schedule events
skips = ["B101", "B104", "B110", "B112"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true

# Third-party libs without py.typed / stubs — scoped override instead of
# a project-wide `ignore_missing_imports`.
[[tool.mypy.overrides]]
module = [
    "aiogram.*",
    "aiohttp.*",
    "alembic.*",
    "sentry_sdk.*",
    "uvloop.*",
    "cairosvg.*",
    "redis.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

# callback.message is typed as Message | InaccessibleMessage | None
# in aiogram 3.x — every handler that touches it triggers union-attr
# even when the runtime has the guarantee (callbacks from inline
# keyboards always have a message).  Fixing this requires adding
# explicit isinstance guards to every handler; scoped suppression here
# is the honest trade-off until that refactor lands as its own PR.
[[tool.mypy.overrides]]
module = [
    "bot.handlers.*",
    "bot.services.scheduler",
]
disable_error_code = ["union-attr"]
